# mare-player

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  codeql.yml  release.yml  rust.yml  scorecard.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_dash_parse.rs  fuzz_fmp4_patch.rs
i18n/ar/: cosmic_applet_mare.ftl
i18n/bn/: cosmic_applet_mare.ftl
i18n/de/: cosmic_applet_mare.ftl
i18n/en/: cosmic_applet_mare.ftl
i18n/es/: cosmic_applet_mare.ftl
i18n/fr/: cosmic_applet_mare.ftl
i18n/hi/: cosmic_applet_mare.ftl
i18n/id/: cosmic_applet_mare.ftl
i18n/it/: cosmic_applet_mare.ftl
i18n/ja/: cosmic_applet_mare.ftl
i18n/ko/: cosmic_applet_mare.ftl
i18n/ms/: cosmic_applet_mare.ftl
i18n/nl/: cosmic_applet_mare.ftl
i18n/pl/: cosmic_applet_mare.ftl
i18n/pt/: cosmic_applet_mare.ftl
i18n/ru/: cosmic_applet_mare.ftl
i18n/sv/: cosmic_applet_mare.ftl
i18n/th/: cosmic_applet_mare.ftl
i18n/tr/: cosmic_applet_mare.ftl
i18n/uk/: cosmic_applet_mare.ftl
i18n/vi/: cosmic_applet_mare.ftl
i18n/zh/: cosmic_applet_mare.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  disk_cache.rs  helpers.rs  i18n.rs  image_cache.rs  lib.rs  main.rs  menu.rs  messages.rs  state.rs
src/audio/: dash.rs  decoder.rs  engine.rs  mod.rs  output.rs  spectrum.rs
src/handlers/: auth.rs  misc.rs  mod.rs  navigation.rs  playback.rs
src/handlers/data/: favorites.rs  library.rs  mod.rs  search.rs  thumbnails.rs
src/tidal/: auth.rs  client.rs  mod.rs  models.rs  mpris.rs  play_history.rs  player.rs
src/views/: albums.rs  artist.rs  auth.rs  feed.rs  history.rs  main.rs  mixes.rs  mod.rs  panel.rs  playlists.rs  popup.rs  profiles.rs  search.rs  settings.rs  share.rs  track_detail.rs  track_radio.rs  tracks.rs  visualizer.rs
src/views/components/: constants.rs  fading_clip.rs  icons.rs  list_helpers.rs  mod.rs  rows.rs
tests/: audio_types.rs  auth.rs  components.rs  config.rs  dash.rs  decoder.rs  disk_cache.rs  engine.rs  helpers.rs  i18n.rs  image_processing.rs  models.rs  mpris.rs  output.rs  player.rs  spectrum.rs  tidal_client.rs
