[package]
name = "cosmic-applet-mare-fuzz"
version = "0.1.9"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.cosmic-applet-mare]
path = ".."
default-features = false

[[bin]]
name = "fuzz_dash_parse"
path = "fuzz_targets/fuzz_dash_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fmp4_patch"
path = "fuzz_targets/fuzz_fmp4_patch.rs"
test = false
doc = false
bench = false
